--- a/platform/constraints/ocaml/executor/BUILD.bazel
+++ b/platform/constraints/ocaml/executor/BUILD.bazel
@@ -1,13 +1,13 @@
 package(default_visibility = ["//visibility:public"])
 
-constraint_setting(name = "executor",
-                   default_constraint_value = ":vm?")
+constraint_setting(name = "executor")
+                   # default_constraint_value = ":vm?")
 
 ## Executor is always vm or sys; the latter matches whatever the
 ## runtime is (amd64 or whatever).
 
 constraint_value(name = "sys", constraint_setting = ":executor")
-alias(name = "sys?", actual = ":sys")
+config_setting(name = "sys?", constraint_values = [":sys"])
 
 constraint_value(name = "vm", constraint_setting = ":executor")
-alias(name = "vm?", actual = ":vm")
+config_setting(name = "vm?", constraint_values = [":vm"])
