--- a/middle_end/closure/BUILD.bazel
+++ b/middle_end/closure/BUILD.bazel
@@ -8,11 +8,8 @@ load("//config:CONFIG.bzl",
      "OC_COMMON_CFLAGS",
      "PLATFORM_CFLAGS")
 
-MODULE_OPTS = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
-# + [
-#     "-nostdlib"
-# ]
-SIG_OPTS    = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
+MODULE_OPTS = []
+SIG_OPTS    = []
 
 STDLIB = ["//boot/lib:stdlib"]
 
@@ -30,7 +27,7 @@ compiler_module(
     sig    = "Closure_cmi",
     opts = MODULE_OPTS,
     deps   = [
-        "//middle_end:Semantics_of_primitives", ## (Middle_end Semantics_of_primitives)
+        "//middle_end:Semantics_of_primitives",
         "//middle_end:Convert_primitives",
         "//middle_end:Compilenv",
         "//middle_end:Clambda_primitives",
